--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="logo">
         <h1>Word/Sentence Counter</h1>
-        <span>V1.0 (Beta) Designed by ICT 12-A</span>
+        <span>CAVCOUNT W&S V1.0 (Beta)</span>
     </div>
     <textarea id="text-input" placeholder="Type your text here..."></textarea>
     <div id="word-count">Word Count: 0</div>
