Update index.html (V1.1)
Add icons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         <span>CAVCOUNT W&S V1.0 (Beta)</span>
     </div>
     <textarea id="text-input" placeholder="Type your text here..."></textarea>
-    <div id="word-count">Word Count: 0</div>
-    <div id="sentence-count">Sentence Count: 0</div>
+    <div id="word-count"><img src="word-icon.png" alt="Word Icon"> Word Count: 0</div>
+    <div id="sentence-count"><img src="sentence-icon.png" alt="Sentence Icon"> Sentence Count: 0</div>
+    <!-- Add the wordmark logo below the sentence count -->
+    <div id="wordmark" class="logo">
+        <img src="wordmark.svg" alt="Wordmark logo">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
