Update index.html (v1.1)
V1.1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="logo">
         <h1>Word/Sentence Counter</h1>
-        <span>CAVCOUNT W&S V1.0 (Beta)</span>
+        <span>CAVCOUNT W&S V1.1</span>
     </div>
     <textarea id="text-input" placeholder="Type your text here..."></textarea>
     <div id="word-count"><img src="word-icon.png" alt="Word Icon"> Word Count: 0</div>
