--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Add the viewport meta tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Include Tesseract.js -->
-    <script src="https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/5.0.3/tesseract.min.js"></script>
 </head>
 <body>
     <div id="logo">
